--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Steckbrief</title>
-<style>
-</style>
+<title>Begrüßung</title>
+<script src="aufgabe0.js"></script>
+
 </head>
-<body>
+<body id="innerHtml">
 	
 </body>
 </html>
