--- a/Aufgabe2/aufgabe2.html
+++ b/Aufgabe2/aufgabe2.html
@@ -1,48 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-<meta charset="utf-8" />
-<title>Aufgabe 2</title>
-<link rel="stylesheet" type="text/css" href="aufgabe2.css">
-<script src="aufgabe2.js"></script>
-</head>
-<body>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII"/>
+    <link rel="stylesheet" type="text/css" href="Aufgabe2.css" ></link>
+ </head>
+ <body>
+ <script src="aufgabe2.js"></script>
+ 
+ <div style="top: 10px; left: 10px;" class="card"> Ablage</div> 
+ 
+ <div style="top: 6px; right: 6px;" class="card"> </div> 
+ <div style="top: 8px; right: 8px;" class="card"> </div> 
+ <div style="top: 10px; right: 10px;" class="card"> 
+   Kartenstapel
+ </div> 
+  
+  
 
-	<div style="top: 10px; left: 10px;" class="card">
-		<!-- Eine div ist eine Karte -->
-		<div class="bg green"></div>
-		<div class="circle"></div>
-		<!-- Der Kreis in der Mitte, in der die Hauptzahl steht -->
-		<div class="top-left">8</div>
-		<!-- Zahl oben links -->
-		<div class="center">8</div>
-		<!-- Zahl in der Mitte -->
-		<div class="bottom-right">8</div>
-		<!-- Zahl unten rechts -->
-	</div>
-
-	<div style="top: 30px; left: 90px;" class="card">
-		<div class="bg blue"></div>
-		<div class="circle"></div>
-		<div class="top-left">5</div>
-		<div class="center">5</div>
-		<div class="bottom-right">5</div>
-	</div>
-
-	<div style="top: 50px; left: 170px;" class="card">
-		<div class="bg yellow"></div>
-		<div class="circle"></div>
-		<div class="top-left">6.</div>
-		<div class="center">6.</div>
-		<div class="bottom-right">6.</div>
-	</div>
-
-	<div style="top: 70px; left: 250px;" class="card">
-		<div class="bg red"></div>
-		<div class="circle"></div>
-		<div class="top-left">1</div>
-		<div class="center">1</div>
-		<div class="bottom-right">1</div>
-	</div>
+ 
 </body>
 </html>
