--- a/Aufgabe2/aufgabe2.html
+++ b/Aufgabe2/aufgabe2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII"/>
-    <link rel="stylesheet" type="text/css" href="Aufgabe2.css" ></link>
+    <link rel="stylesheet" type="text/css" href="aufgabe2.css" ></link>
  </head>
  <body>
  <script src="aufgabe2.js"></script>
