--- a/Aufgabe2/aufgabe2.html
+++ b/Aufgabe2/aufgabe2.html
@@ -11,9 +11,7 @@
  
  <div style="top: 6px; right: 6px;" class="card"> </div> 
  <div style="top: 8px; right: 8px;" class="card"> </div> 
- <div style="top: 10px; right: 10px;" class="card"> 
-   Kartenstapel
- </div> 
+ <div style="top: 10px; right: 10px;" class="card">Kartenstapel</div> 
   
   
 
