--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,9 +15,9 @@
 <body>
     <h3>Nur hier für die Engabgabe</h3>
 </br>   
-    <a href="https://github.com/janamamedow" target="_blank">Repository</a>
+    <a href="https://github.com/janamamedow/eia2/tree/master/EIA2_SS22" target="_blank">Endabgabe Repository</a>
 </br>
-    <a href="https://github.com/janamamedow/EIA2-Endabgabe/EIA2_SS22/index.html" target="_blank">Endabgabe Sommersemester 2022</a>
+    <a href="https://janamamedow.github.io/eia2/EIA2_SS22/index.html" target="_blank">Endabgabe Sommersemester 2022</a>
 </br>
     <a href="https://github.com/janamamedow/EIA2-Endabgabe/Konzept.pdf" target="_blank">Konzept Endabgabe</a>
 
