--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,7 +19,7 @@
 </br>
     <a href="https://janamamedow.github.io/eia2/EIA2_SS22/index.html" target="_blank">Endabgabe Sommersemester 2022</a>
 </br>
-    <a href="https://github.com/janamamedow/EIA2-Endabgabe/Konzept.pdf" target="_blank">Konzept Endabgabe</a>
+    <a href="https://janamamedow.github.io/eia2/EIA2_SS22/Konzept.pdf" target="_blank">Konzept Endabgabe</a>
 
     
    
